@@ -43,9 +43,11 @@
     - Bugfix: When reconfiguring the BibTeX key generator, changes are applied instantly without requiring a restart of JabRef
     - BREAKING: The BibTeX key generator settings from previous versions are lost
     - BREAKING: LabelPatterns [auth.etal], [authEtAl], [authors], [authorsN], [authorLast] and more to omit spaces and commas (and work as described at http://jabref.sourceforge.net/help/LabelPatterns.php)
+    - BREAKING: [keywordN] returns the Nth keyword (as described in the help) and not the first N keywords
     - Feature: new LabelPattern [authFirstFull] returning the last name of the first author and also a "van" or "von" if it exists
     - Feature: all new lines when writing an entry are obeying the globally configured new line (File -> newline separator). Affects fields: abstract and review
     - Feature: [veryShortTitle] and [shortTitle] also skip words like "in", "among", "before", ...
+    - Feature: New LabelPattern [keywordsN], where N is optional. Returns the first N keywords. If no N is specified ("[keywords]"), all keywords are returned. Spaces are removed.
 [dev_2.11]
     - Backports from 2.80: Fix bug #194: JabRef starts again on Win XP and Win Vista
     - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
